--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -18,21 +18,21 @@
     "clean": "rm -rf ../src/web && rm -rf target",
     "commit": "commit-wizard"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ethcore/parity-sysui-app.git"
-  },
   "keywords": [
     "parity",
     "sysui",
     "systemui"
   ],
-  "author": "Ethcore",
+  "author": "Ethcore <admin@ethcore.io>",
   "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/ethcore/parity-sysui-app/issues"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ethcore/parity-ui.git"
   },
-  "homepage": "https://github.com/ethcore/parity-sysui-app#readme",
+  "bugs": {
+    "url": "https://github.com/ethcore/parity-ui/issues"
+  },
+  "homepage": "https://github.com/ethcore/parity-ui#readme",
   "devDependencies": {
     "babel-core": "^6.3.15",
     "babel-eslint": "^6.0.4",
@@ -50,7 +50,6 @@
     "chai": "^3.2.0",
     "chai-enzyme": "^0.4.2",
     "chromedriver": "^2.21.2",
-    "classnames": "^2.2.5",
     "co-mocha": "^1.1.2",
     "coveralls": "^2.11.9",
     "cross-env": "^1.0.7",
@@ -78,8 +77,6 @@
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^2.4.1",
-    "react-router-redux": "^4.0.5",
     "rimraf": "^2.4.3",
     "rucksack-css": "^0.8.6",
     "selenium-server-standalone-jar": "^2.53.0",
@@ -103,6 +100,7 @@
     "babel-polyfill": "^6.9.1",
     "bignumber.js": "^2.3.0",
     "blockies": "0.0.2",
+    "classnames": "^2.2.5",
     "dapps-react-components": "../../components",
     "ethereum-rpc-json": "0.0.1",
     "event-emitter": "^0.3.4",
@@ -116,6 +114,8 @@
     "react-copy-to-clipboard": "4.1.0",
     "react-dom": "^15.0.2",
     "react-redux": "^4.3.0",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-tooltip": "^2.0.3",
     "redux": "^3.2.1",
