--- a/home/web/package.json
+++ b/home/web/package.json
@@ -32,7 +32,6 @@
     "eslint-plugin-promise": "^1.3.2",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
-    
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
     "nightwatch": "0.8.18",
@@ -58,10 +57,19 @@
     "blockies": "0.0.2",
     "classnames": "^2.2.3",
     "dapps-react-components": "../../components",
+    "ethereum-rpc-json": "0.0.1",
     "lodash": "4.11.1",
     "material-ui": "0.15.0",
+    "react": "^15.2.1",
     "react-copy-to-clipboard": "^4.1.0",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
+    "react-tooltip": "^3.0.13",
+    "redux": "^3.5.2",
+    "redux-actions": "^0.10.1",
     "web3": "^0.15.3",
     "whatwg-fetch": "^1.0.0"
   }
