--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -8,7 +8,7 @@
     "startTest": "NODE_ENV=tests npm start",
     "webpack": "webpack --progress --colors",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
-    "lint": "eslint --ignore-path ../.gitignore .",
+    "lint": "eslint --ignore-path ../../.gitignore .",
     "test": "mocha \"src/**/*.spec.js\"",
     "testCoverage": "istanbul cover _mocha -- \"src/**/*.spec.js\"",
     "nightwatch": "NODE_ENV=tests nightwatch",
