--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -7,7 +7,8 @@ build = "build.rs"
 
 [features]
 # default = ["dev"]
-default = ["with-syntex", "parity-dapps/use-precompiled-js"]
+default = ["with-syntex"]
+use-precompiled-js = ["parity-dapps/use-precompiled-js"]
 with-syntex = ["parity-dapps/with-syntex"]
 dev = []
 
