--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -7,7 +7,8 @@ authors = ["Alexander Van de Sande <alex.vandesande@ethdev.com>", "Fabian Vogels
 build = "build.rs"
 
 [features]
-default = ["with-syntex", "parity-dapps/use-precompiled-js"]
+default = ["with-syntex"]
+use-precompiled-js = ["parity-dapps/use-precompiled-js"]
 with-syntex = ["parity-dapps/with-syntex"]
 
 [build-dependencies]
