(Topbar): implement redux

--- a/home/web/package.json
+++ b/home/web/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3010",
     "webpack": "webpack",
     "commit": "commit-wizard",
-    "lint": "eslint . --ignore-path ../.gitignore",
+    "lint": "eslint . --ignore-path ../../.gitignore",
     "test": "mocha --compilers js:babel-core/register \"client/**/*.spec.js\"",
     "prebuild": "npm run clean",
     "build": "webpack --bail --progress --colors",
@@ -27,7 +27,7 @@
     "babel-runtime": "^6.5.0",
     "chai": "3.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^3.0.1",
+    "eslint": "^3.1.0",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.2",
     "file-loader": "^0.8.5",
@@ -41,7 +41,7 @@
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.0.0",
     "rucksack-css": "^0.8.5",
-    "semistandard": "^7.0.5",
+    "semistandard": "^8.0.0",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0",
     "style-loader": "^0.13.0",
@@ -70,6 +70,7 @@
     "react-tooltip": "^3.0.13",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
+    "redux-thunk": "^2.1.0",
     "web3": "^0.15.3",
     "whatwg-fetch": "^1.0.0"
   }
