(extension): fix production build

--- a/extension/package.json
+++ b/extension/package.json
@@ -6,7 +6,8 @@
     "postinstall": "npm link ../signer/web && npm link ../components",
     "start": "npm run devBuild -- -w",
     "devBuild": "webpack --progress --colors",
-    "build": "webpack --progress --colors --bail",
+    "prebuild": "npm run clean",
+    "build": "NODE_ENV=production webpack --progress --colors --bail",
     "compress": "node scripts/compress",
     "genZip": "npm run build && npm run compress",
     "clean": "rimraf build/ dev/ *.zip *.crx",
