(extension): rename App -> app

--- a/extension/chrome/manifest.prod.json
+++ b/extension/chrome/manifest.prod.json
@@ -7,7 +7,7 @@
   "author": "Ethcore Team",
   "browser_action": {
     "default_title": "Parity Signer UI",
-    "default_popup": "App.html"
+    "default_popup": "app.html"
   },
   "externally_connectable": {
     "matches": [
