(TopBar) fix toasts and transcation confirmation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "arrow-parens": ["error", "as-needed"],
     "no-debugger": "error",
     "no-alert": "error",
+    "jsx-quotes": ["error", "prefer-single"],
     "react/jsx-curly-spacing": ["error", "always"]
   }
 }
