--- a/components/package.json
+++ b/components/package.json
@@ -46,6 +46,7 @@
     "babel-core": "^6.5.2",
     "babel-eslint": "6.0.2",
     "babel-loader": "^6.2.3",
+    "babel-plugin-lodash": "^3.2.2",
     "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
@@ -74,9 +75,8 @@
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
     "postcss-loader": "^0.8.1",
+    "react-hot-loader": "^1.3.0",
     "rucksack-css": "^0.8.5",
-    "babel-plugin-lodash": "^3.2.2",
-    
     "semistandard": "^7.0.5",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0",
