--- a/home/web/package.json
+++ b/home/web/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^0.23.1",
     "eslint": "^3.1.0",
     "eslint-config-standard": "^5.3.1",
+    "eslint-config-standard-react": "^3.0.0",
     "eslint-plugin-promise": "^1.3.2",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
