--- a/home/web/package.json
+++ b/home/web/package.json
@@ -40,6 +40,7 @@
     "eslint-config-standard": "^5.3.1",
     "eslint-config-standard-react": "^3.0.0",
     "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-react": "^5.2.2",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
