--- a/.travis.yml
+++ b/.travis.yml
@@ -45,5 +45,5 @@ script:
   - if [ "$BUILD" = "js" ]; then ./scripts/build_js.sh; fi
 
 after_success: |
-  [ $TRAVIS_BRANCH = master ] && [ $TRAVIS_PULL_REQUEST = false ] && \
+  [ $TRAVIS_BRANCH = master ] && [ $TRAVIS_PULL_REQUEST = false ] && [ "$BUILD" = "js" ] && \
   ./scripts/deploy.sh
