active/connected/max peers - Home Page and Status

--- a/home/web/package.json
+++ b/home/web/package.json
@@ -70,8 +70,9 @@
     "dapps-react-components": "../../components",
     "ethereum-rpc-json": "0.0.1",
     "lodash": "4.11.1",
-    "react": "^15.2.1",
     "material-ui": "0.15.2",
+    "numeral": "^1.5.3",
+    "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
     "react-copy-to-clipboard": "^4.1.0",
     "react-dom": "^15.2.1",
