--- a/components/package.json
+++ b/components/package.json
@@ -8,12 +8,12 @@
     "webpack": "webpack",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path ../.gitignore .",
-    "test": "mocha \"src/**/*.spec.js\" || true",
+    "test": "mocha \"src/**/*.spec.js\"",
     "testCoverage": "istanbul cover _mocha -- \"src/**/*.spec.js\"",
     "prebuild": "npm run clean",
-    "build": "webpack --bail --progress --colors || true",
+    "build": "webpack --bail --progress --colors",
     "localPublish": "npm run build && npm publish",
-    "clean": "rm -rf build"
+    "clean": "rm -rf target"
   },
   "author": "Ethcore <admin@ethcore.io>",
   "license": "GPL-3.0",
@@ -40,7 +40,8 @@
     "classnames": "^2.2.3",
     "ethereum-rpc-json": "0.0.1",
     "lodash": "4.11.1",
-    "react-tooltip": "^2.0.3"
+    "react-tooltip": "^2.0.3",
+    "redux-actions": "^0.10.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
@@ -53,9 +54,12 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "6.9.0",
     "babel-runtime": "^6.5.0",
+    "bignumber.js": "^2.3.0",
+    "blockies": "0.0.2",
     "chai": "3.5.0",
     "chai-enzyme": "0.4.2",
     "cheerio": "0.20.0",
+    "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "enzyme": "2.3.0",
     "eslint": "^2.9.0",
@@ -65,6 +69,7 @@
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^1.3.2",
+    "ethereum-rpc-json": "0.0.1",
     "file-loader": "^0.8.5",
     "history": "^3.0.0",
     "ignore-styles": "2.0.0",
@@ -72,16 +77,30 @@
     "istanbul": "0.4.3",
     "jsdom": "9.2.1",
     "json-loader": "^0.5.4",
+    "lodash": "4.11.1",
+    "material-ui": "^0.15.2",
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
     "postcss-loader": "^0.8.1",
+    "react": "^15.2.1",
+    "react-addons-css-transition-group": "^15.2.1",
+    "react-addons-test-utils": "^15.3.0",
+    "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
+    "react-router-redux": "^4.0.5",
+    "react-tap-event-plugin": "^1.0.0",
+    "react-tooltip": "^2.0.3",
+    "redux": "^3.5.2",
+    "redux-actions": "^0.10.1",
     "rucksack-css": "^0.8.5",
     "semistandard": "^7.0.5",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
+    "web3": "^0.17.0-alpha",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-error-notification": "0.1.6",
