--- a/home/web/package.json
+++ b/home/web/package.json
@@ -4,7 +4,7 @@
   "description": "Parity Home Page & TopBar",
   "main": "client/index.js",
   "scripts": {
-    "postinstall": "npm link ../../components",
+    "link": "rm -rf ../../components/node_modules && npm link ../../components",
     "start": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3010",
     "webpack": "webpack",
     "commit": "commit-wizard",
