--- a/signer/web/package.json
+++ b/signer/web/package.json
@@ -4,7 +4,7 @@
   "description": "reusable app for Parity's system UIs",
   "main": "./src/app.js",
   "scripts": {
-    "postinstall": "npm link ../../components",
+    "link": "rm -rf ../../components/node_modules && npm link ../../components",
     "start": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3030",
     "startTest": "NODE_ENV=tests npm start",
     "webpack": "webpack --progress --colors",
