--- a/home/web/package.json
+++ b/home/web/package.json
@@ -41,6 +41,7 @@
     "eslint-config-standard-react": "^3.0.0",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
@@ -71,6 +72,7 @@
     "ethereum-rpc-json": "0.0.1",
     "lodash": "4.11.1",
     "material-ui": "0.15.2",
+    "normalize.css": "^4.2.0",
     "numeral": "^1.5.3",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
@@ -84,6 +86,8 @@
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-thunk": "^2.1.0",
+    "roboto-font": "^0.1.0",
+    "roboto-mono-webfont": "^2.0.986",
     "web3": "^0.15.3",
     "whatwg-fetch": "^1.0.0"
   }
